--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -19,11 +19,12 @@
               <button  class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img width="25" src="images/layaout-icon.png" alt=""></button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                   <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasRightLabel">s</h5>
+                    <h5 class="offcanvas-title" id="offcanvasRightLabel">Menu</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
-                    ...
+                    <a href="pagina-principal.html">INICIO</a>
+                    
                   </div>
                 </div>
             </div>
@@ -31,13 +32,13 @@
         </div>
 
     </header>
-    <div class="container">
+    <div class="container centrado">
       <div class="row">
-        <div class="col-8 w-100">
-          <img src="images/img-larga-ejemplo.webp" alt="">
+        <div class="col-6">
+          <img src="images/img-larga-ejemplo.webp" height="250" alt="">
         </div>
-        <div class="col-4 d-block w-100">
-          <img src="images/no-logo-ejemplo.png" alt="">
+        <div class="col-6">
+          <img src="images/logo.png" height="250" alt="">
         </div>
       </div>
     </div>
