--- a/pagina-principal.html
+++ b/pagina-principal.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Cyberbullying</title>
@@ -19,12 +20,15 @@
               <button  class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img width="25" src="images/layaout-icon.png" alt=""></button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                   <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasRightLabel">Menu</h5>
+                    <h4 class="offcanvas-title" id="offcanvasRightLabel">Menu</h4>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                   </div>
                   <div class="offcanvas-body">
-                    <a href="pagina-principal.html">INICIO</a>
-                    
+                    <h5><a class="offcanvas-link" href="pagina-principal.html">INICIO</a></h5>
+                    <br>
+                    <h5><a class="offcanvas-link" href="">NOSOTROS</a></h5>
+                    <br>
+                    <h5><a class="offcanvas-link" href="profundo.html">EN PROFUNDO</a></h5>
                   </div>
                 </div>
             </div>
